--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="nav-wrapper blue-grey darken-2">
       <a href="#!" class="center brand-logo white-text hide-on-med-and-down">Destiny Persuits</a>
       <ul class="right">
-        <li><a href="https://www.bungie.net/en/OAuth/Authorize?client_id=24263&response_type=code" class="waves-effect waves-light btn blue-grey darken-4 hoverable">Log in to Bungie.net<i class="material-icons right">verified_user</i></a></li>
+        <li><a href="https://www.bungie.net/en/OAuth/Authorize?client_id=24263&response_type=code&state=6i0mkLx79Hp91nzWVeHrzHG4" class="waves-effect waves-light btn blue-grey darken-4 hoverable">Log in to Bungie.net<i class="material-icons right">verified_user</i></a></li>
       </ul>
     </div>
   </nav>
